# av_project_00

./: _команды.py  algo_exam.py  main.py  pyproject.toml
