[project]
name = "av-project-00"
version = "0.1.0"
description = "\"Комментарий/описание при poetry init\""
authors = [
    {name = "av",email = "av.avramenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
